--- a/packages/dso-toolkit/src/components/highlight-box/highlight-box.scss
+++ b/packages/dso-toolkit/src/components/highlight-box/highlight-box.scss
@@ -12,8 +12,11 @@
     $yellow-selector: ".dso-yellow",
     $drop-shadow-selector: ".dso-drop-shadow",
     $border-selector: ".dso-border",
-    $has-counter-selector: ".dso-has-counter"
+    $has-counter-selector: ".dso-has-counter",
+    $step-counter-selector: ".dso-step-counter:first-child"
   );
+
+  @include step-counter.step-counter();
 
   container-type: inline-size;
   position: relative;
@@ -22,6 +25,11 @@
   &.dso-yellow,
   &:not(.dso-border):not(.dso-white) {
     @include highlight-box.exoticChildren();
+  }
+
+  .dso-step-counter > svg.di,
+  .dso-step-counter > dso-icon {
+    @include step-counter.icon();
   }
 
   &:not(.dso-border):not(.dso-white) {
@@ -57,10 +65,14 @@ dso-highlight-box {
     $yellow-selector: "[yellow]",
     $drop-shadow-selector: "[drop-shadow]",
     $border-selector: "[border]",
-    $has-counter-selector: "[has-counter]"
+    $has-counter-selector: "[has-counter]",
+    $step-counter-selector: '[slot="icon"]:first-child'
   );
 
-  @include step-counter.step-counter();
+  svg.di[slot="icon"],
+  dso-icon[slot="icon"] {
+    @include step-counter.icon();
+  }
 
   &[yellow],
   &:not([border]):not([white]) {
